sterlang/examples/pattern-error/inexhaustive_exception0.erlt.warn.exp
-- WARNING ------------ examples/pattern-error/inexhaustive_exception0.erlt:24:1
Missing Patterns
missing: _
 24| test(#e0{}) -> {};
...| ~~~~~~~~~~~~~~~~~~
...| test(#e1{a = true}) -> {};
...| ~~~~~~~~~~~~~~~~~~~~~~~~~~
 26| test(#e1{a = false}) -> {}.
...| ~~~~~~~~~~~~~~~~~~~~~~~~~~
